# Offline-AI-Chatbot-with-VS-Code-Integration

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package-lock.json
desktop-app/: index.html  package.json  vite.config.ts
desktop-app/scripts/: fetch-deps.ps1  install-models.ps1  make-sfx.ps1
desktop-app/src/: App.tsx  styles.css
desktop-app/src-tauri/: Cargo.toml  registry.yaml  tauri.conf.json
desktop-app/src-tauri/resources/models/: README.txt
desktop-app/src-tauri/src/: commands.rs  lib.rs  main.rs  registry.rs  sidecar.rs  state.rs  types.rs
desktop-app/src-tauri/src/providers/: llamacpp.rs  mod.rs  ollama.rs
desktop-app/src-tauri/src/rag/: mod.rs
desktop-app/src/lib/: ipc.ts
docs/: ARCHITECTURE.md
docs/screenshots/: README.md
vscode-extension/: README.md  localforge-0.1.0.vsix  package.json
vscode-extension/src/: chatPanel.ts  client.ts  completions.ts  diagnostics.ts  extension.ts  statusBar.ts
