[package]
name = "localforge"
version = "0.1.0"
description = "Offline AI coding assistant"
edition = "2021"
rust-version = "1.77"

[lib]
name = "localforge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["sync", "time", "process"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
async-stream = "0.3"
async-trait = "0.1"
bytes = "1"
anyhow = "1"
walkdir = "2"

[profile.release]
opt-level = "s"
lto = true
strip = true
panic = "abort"
